fix header not going up and hide scrollbars

--- a/website_navbar.css
+++ b/website_navbar.css
@@ -294,6 +294,15 @@ i.inline{
   white-space: nowrap;
   filter: drop-shadow(0px -4px 8px rgba(61, 64, 91, 0.12));
   padding-left:24px;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;
+  scrollbar-height:none;
+}
+
+.bottom-nav::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    height:0;
+    background: transparent;  /* Optional: just make scrollbar invisible */
 }
 
 .bottom-nav.nav-down {
@@ -383,6 +392,15 @@ i.inline{
 	z-index:10;
   transition:all .3s ease;
     margin-top:-2px;
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;
+    scrollbar-height:none;
+}
+
+.navbar::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    height:0;
+    background: transparent;  /* Optional: just make scrollbar invisible */
 }
 
 .shrink.nav-up {
