--- a/work/ready-to-install-css.css
+++ b/work/ready-to-install-css.css
@@ -128,6 +128,10 @@ table .result td, table .result th {
 		margin-top:32px;
 	}
 
+	.inner-section-small {
+		margin-bottom:32px;
+	}
+
 
 
 
